<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data
        >
        <variable
            name="RegisterViewModel"
            type="com.example.lostnexus.authenticate.register.RegisterViewModel" />
        <variable
            name="clickHandler"
            type="com.example.lostnexus.authenticate.ClickHandler" />
    </data>
    <RelativeLayout
        android:orientation="vertical"
        style="@style/loginParent">
        <ScrollView
            style="@style/parent">

            <RelativeLayout
                style="@style/parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:weightSum="12">

                    <LinearLayout
                        style="@style/parent"
                        android:background="@drawable/login_shape_bk"
                        android:orientation="vertical"
                        android:layout_weight="3">

                        <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk"
                            android:contentDescription="login background" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">


                    <TextView
                        style="@style/headerText"
                        android:layout_gravity="center"
                        android:text="@{RegisterViewModel.name}"
                        android:layout_marginTop="40dp"/>
                    <FrameLayout
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </FrameLayout>
                    <!--                    <include-->
                    <!--                        layout="@layout/layout_register"/>-->
                    <com.google.android.material.card.MaterialCardView
                        style="@style/loginCard"
                        app:cardCornerRadius="@dimen/loginCardRadius"
                        android:elevation="5dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:background="@color/whiteCardColor">

                        <LinearLayout
                            style="@style/linearParent"
                            android:layout_gravity="center"
                            android:padding="@dimen/loginViewsMargin">

                            <TextView
                                style="@style/headerTextPrimary"
                                android:text="@string/register"
                                android:layout_marginTop="@dimen/loginViewsMargin"/>

                            <!--        <EditText-->
                            <!--            android:layout_width="wrap_content"-->
                            <!--            android:layout_height="wrap_content"-->
                            <!--            style="@style/parent">-->

                            <!--        </EditText>-->

                            <EditText
                                style="@style/modifiedEditText"
                                android:inputType="text"
                                android:maxLines="1"
                                android:text="@={RegisterViewModel.name}"

                                android:hint="Name"/>

                            <EditText
                                style="@style/modifiedEditText"
                                android:inputType="text"
                                android:maxLines="1"
                                android:text="@={RegisterViewModel.contact}"

                                android:hint="Mobile Number"/>

                            <EditText
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:text="@={RegisterViewModel.email}"
                                android:hint="@string/login_email_hint"/>

                            <EditText
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:maxLines="1"
                                android:text="@={RegisterViewModel.password}"
                                android:inputType="textPassword"
                                />

                            <Button
                                style="@style/loginButton"
                                android:layout_gravity="center"
                                android:clickable="true"
                                android:enabled="@{RegisterViewModel.registerEnable}"
                                android:onClick="@{()-> RegisterViewModel.onSignUpClicked()}"
                                android:text="Register" />

                            <TextView
                                style="@style/parent"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:onClick="@{clickHandler::alreadyAccountClicked}"
                                android:textColor="@color/primaryTextColor"
                                android:text="@string/signup_login_hint"
                                android:layout_marginTop="@dimen/loginViewsMargin"/>

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>




