<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data
        >
        <variable
            name="LoginViewModel"
            type="com.example.lostnexus.authenticate.login.LoginViewModel" />
        <variable
            name="clickHandler"
            type="com.example.lostnexus.authenticate.ClickHandler" />
    </data>
    <RelativeLayout
        android:orientation="vertical"
        style="@style/loginParent">
        <ScrollView
            style="@style/parent">

            <RelativeLayout
                style="@style/parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:weightSum="12">

                    <LinearLayout
                        style="@style/parent"
                        android:background="@drawable/login_shape_bk"
                        android:orientation="vertical"
                        android:layout_weight="3">

                        <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk"
                            android:contentDescription="login background" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">


                    <TextView
                        style="@style/headerText"
                        android:layout_gravity="center"
                        android:text="App Snipp"
                        android:layout_marginTop="40dp"/>
                    <FrameLayout
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </FrameLayout>
                    <!--                    <include-->
                    <!--                        layout="@layout/layout_register"/>-->
                    <com.google.android.material.card.MaterialCardView

                        style="@style/loginCard"
                        app:cardCornerRadius="@dimen/loginCardRadius"
                        android:elevation="5dp"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:background="@color/whiteCardColor">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <LinearLayout
                                style="@style/linearParent"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:padding="@dimen/loginViewsMargin">

                                <TextView
                                    style="@style/headerTextPrimary"
                                    android:layout_marginTop="@dimen/loginViewsMargin"
                                    android:text="Login" />


                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/editTextEmail"
                                    style="@style/modifiedEditText"
                                    android:hint="@string/login_email_hint"
                                    android:text="@={LoginViewModel.email}"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1" />


                                <EditText
                                    android:id="@+id/editTextPassword"
                                    style="@style/modifiedEditText"
                                    android:hint="@string/login_password_hint"
                                    android:text="@={LoginViewModel.password}"
                                    android:inputType="textPassword"
                                    android:maxLines="1" />


                                <TextView
                                    style="@style/viewParent"
                                    android:layout_gravity="end"
                                    android:layout_marginTop="10dp"
                                    android:onClick="viewForgotPAssword"
                                    android:text="Forgot Password?"
                                    android:textColor="@color/primaryTextColor"
                                    android:textSize="@dimen/newsMoreTextSize" />

                                <Button
                                    android:id="@+id/cirLoginButton"
                                    style="@style/loginButton"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="@dimen/loginViewsMargin"
                                    android:onClick="@{LoginViewModel::onLoginClicked}"
                                    android:text="Login" />

                                <TextView
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/loginViewsMargin"
                                    android:text="@string/login_signup_hint"
                                    android:textAlignment="center"
android:onClick="@{clickHandler::newAccountClicked}"
                                    android:textColor="@color/primaryTextColor"
                                    android:textStyle="bold" />


                            </LinearLayout>
                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>




